# tina-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  ROADMAP.md
.intent/: SYSTEM.md
.intent/phases/001-mariner-trace-core/: commits.txt  plan.md  review.md  spec-diff.md
.intent/phases/002-mariner-local-send-dispatch/: commits.txt  plan.md  reviews.md  spec-diff.md
.intent/phases/003-mariner-stop-and-abandon/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/004-mariner-panic-capture/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/005-mariner-local-spawn-dispatch/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/006-mariner-parent-child-lineage/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/007-mariner-address-liveness/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/008-mariner-restartable-child-records/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/009-mariner-restart-children-execution/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/010-mariner-supervised-panic-restart/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/011-mariner-task-dispatcher-proof/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/012-mariner-io-current-runtime-and-echo/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/013-mariner-socket-address-introspection/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/014-mariner-tcp-completeness/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/015-mariner-runtime-owned-time-and-retry/: commits.txt  plan.md  review.md  (+1 more)
tina/: Cargo.toml
tina-mailbox-spsc/: Cargo.toml
tina-mailbox-spsc/src/: lib.rs
tina-mailbox-spsc/tests/: allocation_accounting.rs  drop_accounting.rs  loom_spsc.rs  miri_spsc.rs  spsc_semantics.rs
tina-runtime/: Cargo.toml
tina-runtime-current/: Cargo.toml
tina-runtime-current/examples/: task_dispatcher.rs  tcp_echo.rs
tina-runtime-current/src/: call.rs  io_backend.rs  lib.rs  tests.rs  trace.rs
tina-runtime-current/src/tests/: supervision.rs
tina-runtime-current/tests/: address_liveness.rs  batch_effect.rs  call_dispatch.rs  consumer_api.rs  local_send_dispatch.rs  multishard_allocation.rs  multishard_dispatcher.rs  panic_capture.rs  retry_backoff.rs  runtime_properties.rs  spawn_dispatch.rs  stop_and_abandon.rs  task_dispatcher.rs  tcp_echo.rs  threaded_substrate.rs  trace_core.rs
tina-runtime/src/: call.rs  io_backend.rs  lib.rs  tests.rs  trace.rs
tina-runtime/tests/: consumer_api.rs  multishard_dispatcher.rs  retry_backoff.rs  runtime_properties.proptest-regressions  tcp_echo.rs  threaded_substrate.rs
tina-sim/: Cargo.toml
tina-sim/src/: lib.rs
tina-sim/tests/: consumer_api.rs  faulted_replay.rs  huygens_dst_harness.rs  io_simulation.rs  multishard_dispatcher.rs  retry_backoff.rs  supervision_simulation.rs  timer_semantics.rs
tina-supervisor/: Cargo.toml
tina-supervisor/src/: lib.rs
tina-supervisor/tests/: supervisor_config.rs
tina/src/: lib.rs
tina/tests/: preferred_surface.rs  sputnik_api.rs  supervision_policy.rs
vendor-betelgeuse/: Cargo.toml  LICENSE.md  Makefile  README.md  TUTORIAL.md  completion.rs  lib.rs  op.rs  slab.rs  task.rs
vendor-betelgeuse/.github/: agent-ci.Dockerfile
vendor-betelgeuse/.github/workflows/: ci.yml
vendor-betelgeuse/examples/echo/: README.md  connection.rs  main.rs  server.rs
vendor-betelgeuse/examples/memcached/: README.md  connection.rs  listener.rs  main.rs  server.rs
vendor-betelgeuse/io/: darwin.rs  linux.rs
vendor-betelgeuse/tests/: io.rs  task.rs
(+31 files in other folders)
