[package]
name = "tina-mailbox-spsc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bounded single-producer/single-consumer mailbox for tina-rs"
repository = "https://github.com/russellromney/tina-rs"

[lib]
path = "src/lib.rs"

[features]
loom = ["dep:loom"]

[dependencies]
tina = { path = "../tina" }
loom = { version = "0.7.2", optional = true }
