[package]
name = "tina-runtime-current"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Single-isolate current-thread runtime core for tina-rs"
repository = "https://github.com/russellromney/tina-rs"

[lib]
path = "src/lib.rs"

[dependencies]
tina = { path = "../tina" }
tina-supervisor = { path = "../tina-supervisor" }

[dev-dependencies]
proptest = { version = "1.6.0", default-features = false, features = ["std"] }
