[package]
name = "tina-supervisor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Supervisor configuration types for tina-rs"
repository = "https://github.com/russellromney/tina-rs"

[lib]
path = "src/lib.rs"

[dependencies]
tina = { path = "../tina" }
